dist/1.0/bin/sample/retrieveUnpackaged/objects/Generic_Product_Attribute__c.object
<CustomObject>
    <description>Stores relation between Generic Products and Attributes</description>
    <fields>
        <fullName>A_End_Interface__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value of this attribute will be visible directly on Order Line in A-End Interface field.</description>
        <inlineHelpText>Value of this attribute will be visible directly on Order Line in A-End Interface field.</inlineHelpText>
        <label>A-End Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_End_Medium__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value of this attribute will be visible directly on Order Line in A-End Medium field.</description>
        <inlineHelpText>Value of this attribute will be visible directly on Order Line in A-End Medium field.</inlineHelpText>
        <label>A-End Medium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_End__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attribute containing A-End address</description>
        <label>A-End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attribute_ID__c</fullName>
        <description>Attribute Record Id for which relationship is created</description>
        <inlineHelpText>Attribute Record Id for which relationship is created</inlineHelpText>
        <label>Attribute</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Generic Product Attributes</relationshipLabel>
        <relationshipName>GenericProductAttributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Attribute_Label_English__c</fullName>
        <description>Attribute Label (English)</description>
        <formula>Attribute_ID__r.Label_Eng__c</formula>
        <inlineHelpText>Attribute Label (English)</inlineHelpText>
        <label>Attribute Label (English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Label_Hungarian__c</fullName>
        <formula>Attribute_ID__r.Label_HUN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Label (Hungarian)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Label_Polish__c</fullName>
        <formula>Attribute_ID__r.Label_POL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Label (Polish)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribute_Label_Slovak__c</fullName>
        <description>Attribute Label (Slovak)</description>
        <formula>Attribute_ID__r.Label_SVK__c</formula>
        <inlineHelpText>Attribute Label (Slovak)</inlineHelpText>
        <label>Attribute Label (Slovak)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>B_End__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attribute containing B-End address</description>
        <label>B-End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bandwidth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value of this attribute will be visible directly on Order Line in Bandwidth field.</description>
        <label>Bandwidth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circuit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that Attribute stores Circuit ID.</description>
        <inlineHelpText>Indicates that Attribute stores Circuit ID.</inlineHelpText>
        <label>Circuit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ForInvoicing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>For Invoicing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generic_Product_Label_English__c</fullName>
        <description>Generic Product Label (English)</description>
        <formula>Generic_Product__r.Label_Eng__c</formula>
        <inlineHelpText>Generic Product Label (English)</inlineHelpText>
        <label>Generic Product Label (English)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Product_Label_Hungarian__c</fullName>
        <formula>Generic_Product__r.Label_HUN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Product Label (Hungarian)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Product_Label_Polish__c</fullName>
        <formula>Generic_Product__r.Label_POL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic Product Label (Polish)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Product_Label_Slovak__c</fullName>
        <description>Generic Product Label (Slovak)</description>
        <formula>Generic_Product__r.Label_SVK__c</formula>
        <inlineHelpText>Generic Product Label (Slovak)</inlineHelpText>
        <label>Generic Product Label (Slovak)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generic_Product__c</fullName>
        <label>Generic Product</label>
        <referenceTo>Generic_Product__c</referenceTo>
        <relationshipLabel>Generic Product Attributes</relationshipLabel>
        <relationshipName>Generic_Product_Attributes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Interface__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value of this attribute will be visible directly on Order Line in Interface field.</description>
        <label>Interface</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medium__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value of this attribute will be visible directly on Order Line in Medium field.</description>
        <label>Medium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if an attribute is used for storing phone numbers</description>
        <inlineHelpText>Specifies if an attribute is used for storing phone numbers</inlineHelpText>
        <label>Phone Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the attribute is required on GenericProduct or not</description>
        <inlineHelpText>Specifies whether the attribute is required on GenericProduct or not</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>Defines order in which this item will be displayed in Product Configurator.</description>
        <inlineHelpText>Defines order in which this item will be displayed in Product Configurator.</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <description>Unique identifier which can be used for data synchronization between diferent systems</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier which can be used for data synchronization between diferent systems</inlineHelpText>
        <label>Source Record Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Synchronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Token_Name__c</fullName>
        <description>name of token representing this attribute if this attribute is under specific generic product</description>
        <inlineHelpText>name of token representing this attribute if this attribute is under specific generic product</inlineHelpText>
        <label>Token Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Token_Value__c</fullName>
        <description>Specifies from where value for token should be taken.</description>
        <inlineHelpText>Specifies from where value for token should be taken.</inlineHelpText>
        <label>Token Value</label>
        <picklist>
            <picklistValues>
                <fullName>Value</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Label</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes an attribute that is used for usage measurement (there can be only one such flag defined for one Generic Product)</description>
        <label>Username</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voice_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if an attribute is used for selecting Voice Type on Phone Line</description>
        <inlineHelpText>Specifies if an attribute is used for selecting Voice Type on Phone Line</inlineHelpText>
        <label>Voice Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>phoneNumberType__c</fullName>
        <description>PL Billing for handling the same number on 2 different types of services</description>
        <inlineHelpText>Technical field for PL Billing</inlineHelpText>
        <label>Phone Number Type</label>
        <picklist>
            <picklistValues>
                <fullName>default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Generic Product Attribute</label>
    <nameField>
        <displayFormat>GPA-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Generic Product Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>